# voice_cloning_chat

./: LICENSE  README.md  rf_speech.mov
backend/: mypy.ini  pyproject.toml
backend/app/: main.py  pipeline.py  utils.py
frontend/: index.html  script.js  style.css
