[tool.poetry]
name = "voice-clone-chat"
version = "0.1.0"
description = "Chat with an AI version of anyone"
authors = ["Sam Liang <iamsamliang8@gmail.com>"]
license = "MIT"
readme = "../README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "~3.11.6"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
